' Generated by UML Generator
' Encoded: hLPDRzim3BtxL-ZehacnSmv3Wmt51gn0W0Ix33keCjDeqzTaAK5NzBzFacj7akKaAtQnOpwAUgGeljos1cjZEQlQNrGeh357XE6sNHgZwOCry8L8iQP_0BslThG1HAWc3AegUA7FaiDc1zY0liC4E_ovGcYEkLgW9LUCRYbeRr4CFu5UeBNHW3aLZwjW292MFu4OwT1L_zFR6NtScNQ1NkD_3PyUQ8a642vMU8SGKYaVVIKLaLgimgS7vkvnFI9Pf_nco5ZXbs_yQuOck3gWm7I6YZndA6Nf5fSuNdb-1sp8xbxkATJSFyFERjkh1TfBsdWN44tdqDjU-XCOY7ILRy3jIvMXKlHXXZeChdN1QpBjG56AEc8Zjzluy-3weiloNZOG8sO_iiXkEszxfJUa4if_FetWLau1zqSQdUvv_YsO9SyCToE3XjyM17cgj_sl1MgaVM1mONfPNKycIgpM8Cp77LR6PqE5yUQaFOQ2P87_PsbyJqmsPG19H36kc94g2OHj2rb9DmVf4XG2sD8sL6ResfL0Mj6Ci5Cr7b8xtqQ3QwbU5pLDNlUf2vGj0WroxJERIBY4TJqVZwaK_oQPvL0ps0FBZ-BabOjdrWLNBtP_MzqQol-TPZ8pBnXqiVlRQAgqVK_Uwp3wphFg_2Rfs6J3HXx4fGGYVTj0Qpvfkkzq-FhPoRkXv0LnJ4MDzMFRh_x-8rAIiOg_cyyZ_IxZkPINlOwINiPJTP_OgHFwYGqIpH_xtDnyw6vCTPHARylfT-hZaMFY-SXEqUEmASLBqOx1hTDnzsVhBm
' URL: http://www.plantuml.com/plantuml/uml/hLPDRzim3BtxL-ZehacnSmv3Wmt51gn0W0Ix33keCjDeqzTaAK5NzBzFacj7akKaAtQnOpwAUgGeljos1cjZEQlQNrGeh357XE6sNHgZwOCry8L8iQP_0BslThG1HAWc3AegUA7FaiDc1zY0liC4E_ovGcYEkLgW9LUCRYbeRr4CFu5UeBNHW3aLZwjW292MFu4OwT1L_zFR6NtScNQ1NkD_3PyUQ8a642vMU8SGKYaVVIKLaLgimgS7vkvnFI9Pf_nco5ZXbs_yQuOck3gWm7I6YZndA6Nf5fSuNdb-1sp8xbxkATJSFyFERjkh1TfBsdWN44tdqDjU-XCOY7ILRy3jIvMXKlHXXZeChdN1QpBjG56AEc8Zjzluy-3weiloNZOG8sO_iiXkEszxfJUa4if_FetWLau1zqSQdUvv_YsO9SyCToE3XjyM17cgj_sl1MgaVM1mONfPNKycIgpM8Cp77LR6PqE5yUQaFOQ2P87_PsbyJqmsPG19H36kc94g2OHj2rb9DmVf4XG2sD8sL6ResfL0Mj6Ci5Cr7b8xtqQ3QwbU5pLDNlUf2vGj0WroxJERIBY4TJqVZwaK_oQPvL0ps0FBZ-BabOjdrWLNBtP_MzqQol-TPZ8pBnXqiVlRQAgqVK_Uwp3wphFg_2Rfs6J3HXx4fGGYVTj0Qpvfkkzq-FhPoRkXv0LnJ4MDzMFRh_x-8rAIiOg_cyyZ_IxZkPINlOwINiPJTP_OgHFwYGqIpH_xtDnyw6vCTPHARylfT-hZaMFY-SXEqUEmASLBqOx1hTDnzsVhBm
' Generated on: 2025-12-14T15:08:57.846372

@startuml
skinparam classAttributeIconSize 0
hide circle

class HomeTheaterFacade {
  -amp: Amplifier
  -player: StreamingPlayer
  -projector: Projector
  -lights: TheaterLights
  -screen: Screen
  -popper: PopcornPopper
  --
  +HomeTheaterFacade(amp: Amplifier, tuner: Tuner, player: StreamingPlayer, projector: Projector, lights: TheaterLights, screen: Screen, popper: PopcornPopper)
  +watchMovie(movie: String): void
  +endMovie(): void
}

class Projector {
  -description: String
  --
  +Projector(description: String, player: StreamingPlayer)
  +on(): void
  +off(): void
  +wideScreenMode(): void
  +tvMode(): void
  +toString(): String
}

class Tuner {
  -description: String
  --
  +Tuner(description: String, amplifier: Amplifier)
  +on(): void
  +off(): void
  +setAm(): void
  +setFm(): void
  +setFrequency(frequency: double): void
  +toString(): String
}

class StreamingPlayer {
  -description: String
  -currentChapter: int
  -movie: String
  --
  +StreamingPlayer(description: String, amplifier: Amplifier)
  +on(): void
  +off(): void
  +play(movie: String): void
  +play(chapter: int): void
  +stop(): void
  +pause(): void
  +setTwoChannelAudio(): void
  +setSurroundAudio(): void
  +toString(): String
}

class Amplifier {
  -description: String
  --
  +Amplifier(description: String)
  +on(): void
  +off(): void
  +setStreamingPlayer(player: StreamingPlayer): void
  +setStereoSound(): void
  +setSurroundSound(): void
  +setTuner(tuner: Tuner): void
  +setVolume(level: int): void
  +toString(): String
}

class TheaterLights {
  -description: String
  --
  +TheaterLights(description: String)
  +on(): void
  +off(): void
  +dim(level: int): void
  +toString(): String
}

class PopcornPopper {
  -description: String
  --
  +PopcornPopper(description: String)
  +on(): void
  +off(): void
  +pop(): void
  +toString(): String
}

class Screen {
  -description: String
  --
  +Screen(description: String)
  +up(): void
  +down(): void
  +toString(): String
}

class HomeTheaterTestDrive {
  +{static} main(args: String[]): void
}

HomeTheaterFacade *-- Amplifier
HomeTheaterFacade *-- StreamingPlayer
HomeTheaterFacade *-- Projector
HomeTheaterFacade *-- TheaterLights
HomeTheaterFacade *-- Screen
HomeTheaterFacade *-- PopcornPopper
HomeTheaterFacade ..> Tuner
Projector ..> StreamingPlayer
Tuner ..> Amplifier
StreamingPlayer ..> Amplifier
Amplifier ..> StreamingPlayer
Amplifier ..> Tuner
@enduml